office-work/module1/main (2022_08_30 07_32_23 UTC).tf

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}
  
resource "aws_instance" "webserver"{
 instance_type = var.instance_type
 ami = data.aws_ami.ubuntu.id
 vpc_security_group_ids = [aws_security_group.webserver-group-1.id]
 key_name = var.key_name
user_data = <<-EOF
   #!/bin/bash
yum update -y
yum install -y httpd.x86_64
systemctl start httpd.service
systemctl enable httpd.service
echo “Hello World from $(hostname -f)” > /var/www/html/index.html
  EOF

 tags = {
    Name = "webserver"
  }
}

resource "aws_security_group" "webserver-group-1" {
  name        = "webserver"
  description = "terraform security group"

  ingress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  
    egress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
   egress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_key_pair" "practice-tf" {
    key_name = "practice-tf"
  public_key = file("${path.module}/rsa.pub")
  
}
