office-work/module1/main (2022_09_05 08_20_10 UTC).tf

terraform {
  cloud {
    organization = "credottt"

    workspaces {
      name = "practice-workspace"
    }
  }
}
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}
  
resource "aws_instance" "webserver"{
 instance_type = var.instance_type
 ami = data.aws_ami.ubuntu.id
 vpc_security_group_ids = [aws_security_group.webserver-group-1.id]
 key_name = var.key_name
user_data = <<-EOF
      #!/bin/sh
      sudo apt-get update
      sudo apt install -y apache2
      sudo systemctl status apache2
      sudo systemctl start apache2
      sudo chown -R $USER:$USER /var/www/html
      sudo echo "<html><body><h1>Hello  this is arsalaan at instance id `curl http://169.254.169.254/latest/meta-data/instance-id` </h1></body></html>" > /var/www/html/index.html
      EOF
}
 

# resource "aws_launch_configuration" "terramino" {
#   name_prefix     = "learn-terraform-aws-asg-"
#   image_id        = data.aws_ami.ubuntu.id
#   instance_type   = var.instance_type
#   user_data       = var.user_data
#   security_groups = [aws_security_group.webserver-group-1.id]
# tags{
#   name= "webserver"
# }

#   lifecycle {
#     create_before_destroy = true
#   }
# }
# resource "aws_autoscaling_group" "terramino" {
#   availability_zones   = ["ap-south-1a"]
#   min_size             = 1
#   max_size             = 3
#   desired_capacity     = 1
#   launch_configuration = aws_launch_configuration.terramino.name
# }

resource "aws_security_group" "webserver-group-1" {
  name        = "webserver"
  description = "terraform security group"

  ingress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    protocol    = "TCP"
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
  
    egress {
    from_port   = 22
    protocol    = "TCP"
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
   egress {
    from_port   = 80
    protocol    = "TCP"
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
   egress {
    from_port   = 443
    protocol    = "TCP"
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_key_pair" "practice-tf" {
    key_name = "practice-tf"
  public_key = file("${path.module}/rsa.pub")
  
}
